[metadata]
name = datadriven
version = 1.0.0
description = Run a test case multiple times with different data
long_description = file: README.md
long_description_content_type = text/markdown
author = Geekie
author_email = eng@geekie.com.br
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
